export const snapshot = {};

snapshot[`Cycle List Command - Help Text 1`] = `
stdout:
"
Usage: list

Description:

  List cycles for a team

Options:

  -h, --help          - Show this help.                                   
  --team      <team>  - Team key, name, or ID (defaults to current team)  
  -j, --json          - Output as JSON                                    

"
stderr:
""
`;

snapshot[`Cycle List Command - With Mock Cycles 1`] = `
stdout:
"#  NAME      START      END        STATUS   
14 Sprint 14 2026-03-10 2026-03-24 Upcoming 
13 Sprint 13 2026-02-24 2026-03-10 Active   
12 Sprint 12 2026-02-10 2026-02-24 Completed
"
stderr:
""
`;

snapshot[`Cycle List Command - No Cycles Found 1`] = `
stdout:
"No cycles found for this team.
"
stderr:
""
`;

snapshot[`Cycle List Command - JSON Output 1`] = `
stdout:
'{
  "nodes": [
    {
      "name": null,
      "startsAt": "2026-02-24T00:00:00.000Z",
      "endsAt": "2026-03-10T00:00:00.000Z",
      "completedAt": null,
      "isActive": true,
      "isFuture": false,
      "isPast": false,
      "id": "cycle-2",
      "number": 13
    },
    {
      "name": "Sprint 12",
      "startsAt": "2026-02-10T00:00:00.000Z",
      "endsAt": "2026-02-24T00:00:00.000Z",
      "completedAt": "2026-02-24T00:00:00.000Z",
      "isActive": false,
      "isFuture": false,
      "isPast": true,
      "id": "cycle-1",
      "number": 12
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Cycle List Command - Empty JSON 1`] = `
stdout:
'{
  "nodes": [],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Cycle List Command - JSON Output With Pagination 1`] = `
stdout:
'{
  "nodes": [
    {
      "name": null,
      "startsAt": "2026-06-01T00:00:00.000Z",
      "endsAt": "2026-06-15T00:00:00.000Z",
      "completedAt": null,
      "isActive": false,
      "isFuture": true,
      "isPast": false,
      "id": "cycle-2",
      "number": 2
    },
    {
      "name": null,
      "startsAt": "2026-01-01T00:00:00.000Z",
      "endsAt": "2026-01-15T00:00:00.000Z",
      "completedAt": null,
      "isActive": false,
      "isFuture": false,
      "isPast": true,
      "id": "cycle-1",
      "number": 1
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;

snapshot[`Cycle List Command - By Team Name 1`] = `
stdout:
'{
  "nodes": [
    {
      "name": "Sprint 1",
      "startsAt": "2026-01-01T00:00:00.000Z",
      "endsAt": "2026-01-15T00:00:00.000Z",
      "completedAt": null,
      "isActive": false,
      "isFuture": false,
      "isPast": true,
      "id": "cycle-1",
      "number": 1
    }
  ],
  "pageInfo": {
    "hasNextPage": false,
    "endCursor": null
  }
}
'
stderr:
""
`;
